# daocre8

./: .gitignore  Anchor.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: main.yml
app/: ConnectWallet.tsx  Navbar.tsx  PageTitle.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/(backer)/: NoProjects.tsx  layout.tsx
app/(home)/: Cta.tsx  Facts.tsx  Faq.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  ProjectCard.tsx  Section.tsx  VideoModal.tsx
app/creator/: CreatorTitle.tsx  NoProjects.tsx  layout.tsx  page.tsx
app/raise/: Agreement.tsx  BasicDetails.tsx  Category.tsx  FormButtons.tsx  FormContext.tsx  FundingAndMilestones.tsx  ProjectStory.tsx  Rewards.tsx  Summary.tsx  SummaryTitle.tsx  Team.tsx  layout.tsx  (+1 more)
lib/: constants.ts  idl.json  metadata.json  mock.ts  utils.ts
programs/daocre8-program/: Cargo.toml
programs/daocre8-program/src/: constants.rs  errors.rs  lib.rs  poll_contexts.rs  poll_methods.rs  poll_types.rs  states.rs
programs/daocre8-program/src/creator/: constant.rs  mod.rs  state.rs
programs/daocre8-program/src/creator_nft/: constant.rs  mod.rs  state.rs
programs/daocre8-program/src/escrow/: constant.rs  mod.rs  state.rs
programs/daocre8-program/src/milestones/: constant.rs  mod.rs  state.rs
programs/daocre8-program/src/polls/: constant.rs  mod.rs  state.rs  types.rs
programs/daocre8-program/src/project_dao/: constants.rs  mod.rs  state.rs
(+122 files in other folders)
